--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h1>Temperatur Umrechner</h1>
 
-    <form @submit="submit" method="post" novalidate>
+    <form method="post" novalidate>
         <div class="form-group">
 
             <input type="text" name="from" placeholder="1.0"/>
