add changes from PR

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>CalcTemp</title>
@@ -18,7 +18,7 @@
 
             <input type="text" name="from" placeholder="1.0"/>
 
-            <select id="from">
+            <select name="from">
                 <option value="c">Celsius</option>
                 <option value="f">Fahrenheit</option>
                 <option value="k">Kelvin</option>
@@ -31,8 +31,8 @@
 
         <div class="form-group">
             <input type="text" name="to" value="?"/>
-            <select id="to">
-                <option value="c" disabled>Celsius</option>
+            <select name="to">
+                <option value="c">Celsius</option>
                 <option value="f">Fahrenheit</option>
                 <option value="k">Kelvin</option>
             </select>
