--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <input type="text" name="from" placeholder="1.0"/>
 
-            <select name="from">
+            <select name="from-unit">
                 <option value="c">Celsius</option>
                 <option value="f">Fahrenheit</option>
                 <option value="k">Kelvin</option>
