--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="form-group">
             <input type="text" name="to" value="?"/>
-            <select name="to">
+            <select name="to-unit">
                 <option value="c">Celsius</option>
                 <option value="f">Fahrenheit</option>
                 <option value="k">Kelvin</option>
